# oxide-launcher

./: Cargo.toml  LICENSE  README.md
auth/: Cargo.toml
auth/src/: error.rs  errors.rs  lib.rs  yggdrasil.rs
launcher-cli/: Cargo.toml
launcher-cli/src/: main.rs
launcher-core/: Cargo.toml
launcher-core/src/: lib.rs  meta.rs
