[package]
name = "auth"
version = "0.1.0"
authors = ["TheOddGarlic <umutinanerdogan62@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
curl = "0.4.37"
anyhow = "1.0.40"
