[package]
name = "launcher-cli"
version = "0.1.0"
authors = ["TheOddGarlic <umutinanerdogan62@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launcher-core = { path = "../launcher-core" }
auth = { path = "../auth" }
clap = "2.33.3"